--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -17,14 +17,20 @@
 	    </button>
 	    <div class="collapse navbar-collapse" id="navbarNav">
 	      <ul class="navbar-nav">
+	      	<li class="nav-item">
+	          <a class="nav-link" href="index.html">
+          		<span class="short">Home</span>
+          		<span class="long">Computer Science & Engg.</span>
+	          </a>
+	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">
+	          <a class="nav-link" href="cse.html">
           		<span class="short">CSE</span>
           		<span class="long">Computer Science & Engg.</span>
 	          </a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">
+	          <a class="nav-link" href="ece.html">
           		<span class="short">ECE</span>
           		<span class="long">Electronics and Communication & Engg.</span>
 	          </a>
@@ -36,17 +42,18 @@
 	          </a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">
+	          <a class="nav-link" href="mech.html">
           		<span class="short">MECH</span>
           		<span class="long">Mechanical Engg.</span>
 	          </a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">
+	          <a class="nav-link" href="civil.html">
           		<span class="short">CIV</span>
           		<span class="long">Civil Engg.</span>
 	          </a>
 	        </li>
+
 	      </ul>
 	    </div>
 	  </div>
@@ -86,3 +93,177 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
 </body>
 </html>
+-->
+
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>CollegeMate</title>
+	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link rel="icon" href="./css/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="./css/index.css">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <div class="container-fluid">
+	    <a class="navbar-brand" href="#">College Mate</a>
+	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      	<span class="navbar-toggler-icon"></span>
+    	</button>
+	  
+	    <div  class="collapse navbar-collapse" id="navbarNav">
+	      <ul class="navbar-nav">
+	      	<li class="nav-item">
+	          <a class="nav-link active" href="index.html">HOME</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="cse.html">CSE</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="ece.html">ECE</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="eee.html">EEE</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="mech.html">MECH</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="civil.html">CIVIL</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="civil.html">IT</a>
+	        </li>
+	      </ul>
+	    </div>
+	   
+	  </div>
+</nav>
+<br>
+	
+<!--
+<div class="content-image-left">		
+<img id="i" src="./images/bookmw.png" alt="books">
+</div>	
+-->
+	<div class="container-fluid content-field row">	
+		<div id="left" class="content-image">
+			<img id="content-image" src="./images/bookmw.png" >
+	    </div>
+	    <div id="right" class=" quote">
+	    	<blockquote class="blockquote">
+	    	<p>"Books are no more threatened by kindle than stairs by elevators!"</p>
+	    	</blockquote>
+	    </div>
+	</div>
+<!--	
+<div class="content-image-right">	
+<img id="j" src="./images/ebookr.png" alt="books">
+</div>
+-->
+<br>
+<br>
+<br>
+
+
+
+
+<div class="table-content" class="container">
+<table class="table-content"  >
+	<tr>
+		<td>
+			<div class="card text-white bg-dark mb-3" style="width: 18rem;">
+			  <img src="./images/pexelsmarkus.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">COMPUTER SCIENCE ENGINEERING</h5>
+			    <p class="card-text">Computer Science Engineering (CSE) encompasses a variety of topics that relates to computation, like analysis of algorithms, programming languages, program design, software, and computer hardware. Computer Science engineering has roots in electrical engineering, mathematics, and linguistics.</p>
+			    <a href="cse.html" class="btn   btn-primary"><b>E-Books-></b></a>
+			  </div>
+			</div>
+		</td>
+		
+		<td>.....</td>
+		
+		<td>
+			<div class="card text-white bg-dark mb-3" style="width: 18rem;">
+			  <img src="./images/pexelscottonbro.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">ELECTRONICS AND COMMUNICATION ENGINEERING</h5>
+			    <p class="card-text">“Electronics and Communication Engineering” is one of the fastest growing field of engineering courses. It involves the transmission of information across the channel. Electronics and Communication Engineering (ECE) compiles in Communication Engineering and core Electronics Engineering.</p>
+			    <a href="ece.html" class="btn  btn-primary"><b>E-Books-></b></a>
+			  </div>
+			</div>
+		</td>
+
+		<td>.....</td>
+	
+		<td>
+			<div class="card text-white bg-dark mb-3" style="width: 18rem;">
+			  <img src="./images/pexelsnicwood.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">ELECTRICAL AND ELECTRONICS ENGINEERING</h5>
+			    <p class="card-text">Electrical & Electronics Engineering (EEE), deals with the engineering problems, opportunities and needs of electrical, electronics, computer, telecommunication systems and related industries.</p>
+			    <a href="eee.html" class="btn  btn-primary"><b>E-Books-></b> </a>
+			  </div>
+			</div>
+		</td>
+	</tr>
+	
+	<td>.....</td>
+
+	<tr>
+		
+		<td>
+			<div class="card text-white bg-dark mb-3" style="width: 18rem;">
+			  <img src="./images/pexelsmike.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">MECHANICAL ENGINEERING</h5>
+			    <p class="card-text">Mechanical engineers produce specifications for, design, develop, manufacture and install new or modified mechanical components or systems. Mechanical engineers need to be technically minded, able to demonstrate numerical and scientific ability and have problem-solving skills.</p>
+			    <a href="mech.html" class="btn btn-primary"><b>E-Books-></b></a>
+			  </div>
+			</div>
+		</td>
+
+		<td>.....</td>
+	
+		<td>
+			<div class="card text-white bg-dark mb-3" style="width: 18rem;">
+			  <img src="./images/pexelspixabay.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">CIVIL ENGINEERING</h5>
+			    <p class="card-text">Civil engineers create, improve and protect the environment in which we live. They plan, design and oversee construction and maintenance of building structures and infrastructure, such as roads, railways, airports, bridges, harbours, dams, irrigation projects, power plants, and water and sewerage systems.</p>
+			    <a href="civil.html" class="btn  btn-primary"><b>E-Books-></b></a>
+			  </div>
+			</div>
+		</td>
+
+		<td>.....</td>
+		
+		<td>
+			<div class="card text-white bg-dark mb-3" style="width: 18rem;">
+			  <img src="./images/microsoft.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">INFORMATION AND TECHNOLOGY</h5>
+			    <p class="card-text">Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data or information. IT is typically used within the context of business operations as opposed to personal or entertainment technologies. IT is considered to be a subset of information and communications technology (ICT).</p>
+			    <a href="#" class="btn  btn-primary"><b>E-Books-></b></a>
+			  </div>
+			</div>
+		</td>
+	</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+</body>
