--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
 	    </div>
 	    <div id="right" class=" quote">
 	    	<blockquote class="blockquote">
-	    	<p>"Books are no more threatened by kindle than stairs by elevators!"</p>
+	    	<p id="title">CollegeMate</p>	
+	    	<p id="title">" Books are no more threatened by kindle than stairs by elevators! "</p>
 	    	</blockquote>
 	    </div>
 	</div>
@@ -168,9 +169,9 @@
 <br>
 
 
+<!--
 
-
-<div class="table-content" class="container">
+<div class="table-content container">
 <table class="table-content"  >
 	<tr>
 		<td>
@@ -254,6 +255,65 @@
 	</tr>
 </table>
 </div>
+--><div class="container branches">
+		<div class="row center ">
+			<div class="card text-white bg-dark mb-3 col-6 col-md-4 margin" style="width: 18rem;">
+				  <img src="./images/pexelsmarkus.jpg" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">COMPUTER SCIENCE ENGINEERING</h5>
+				    <p class="card-text">Computer Science Engineering (CSE) encompasses a variety of topics that relates to computation, like analysis of algorithms, programming languages, program design, software, and computer hardware. Computer Science engineering has roots in electrical engineering, mathematics, and linguistics.</p>
+				    <a href="cse.html" class="btn   btn-primary"><b>E-Books-></b></a>
+				  </div>
+				</div>
+
+
+			<div class="card text-white bg-dark mb-3 col-6 col-md-4 margin" style="width: 18rem;">
+				  <img src="./images/pexelscottonbro.jpg" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">ELECTRONICS AND COMMUNICATION ENGINEERING</h5>
+				    <p class="card-text">“Electronics and Communication Engineering” is one of the fastest growing field of engineering courses. It involves the transmission of information across the channel. Electronics and Communication Engineering (ECE) compiles in Communication Engineering and core Electronics Engineering.</p>
+				    <a href="ece.html" class="btn  btn-primary"><b>E-Books-></b></a>
+				  </div>
+				</div>
+
+			<div class="card text-white bg-dark mb-3 col-6 col-md-4 margin" style="width: 18rem;">
+				  <img src="./images/pexelsnicwood.jpg" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">ELECTRICAL AND ELECTRONICS ENGINEERING</h5>
+				    <p class="card-text">Electrical & Electronics Engineering (EEE), deals with the engineering problems, opportunities and needs of electrical, electronics, computer, telecommunication systems and related industries.</p>
+				    <a href="eee.html" class="btn  btn-primary"><b>E-Books-></b> </a>
+				  </div>
+				</div>
+
+			<div class="card text-white bg-dark mb-3 col-6 col-md-4 margin" style="width: 18rem;">
+				  <img src="./images/pexelsmike.jpg" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">MECHANICAL ENGINEERING</h5>
+				    <p class="card-text">Mechanical engineers produce specifications for, design, develop, manufacture and install new or modified mechanical components or systems. Mechanical engineers need to be technically minded, able to demonstrate numerical and scientific ability and have problem-solving skills.</p>
+				    <a href="mech.html" class="btn btn-primary"><b>E-Books-></b></a>
+				  </div>
+				</div>
+
+			<div class="card text-white bg-dark mb-3 col-6 col-md-4 margin" style="width: 18rem;">
+				  <img src="./images/pexelspixabay.jpg" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">CIVIL ENGINEERING</h5>
+				    <p class="card-text">Civil engineers create, improve and protect the environment in which we live. They plan, design and oversee construction and maintenance of building structures and infrastructure, such as roads, railways, airports, bridges, harbours, dams, irrigation projects, power plants, and water and sewerage systems.</p>
+				    <a href="civil.html" class="btn  btn-primary"><b>E-Books-></b></a>
+				  </div>
+				</div>
+
+			<div class="card text-white bg-dark mb-3 col-6 col-md-4 margin" style="width: 18rem;">
+				  <img src="./images/microsoft.jpg" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">INFORMATION AND TECHNOLOGY</h5>
+				    <p class="card-text">Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data or information. IT is typically used within the context of business operations as opposed to personal or entertainment technologies. IT is considered to be a subset of information and communications technology (ICT).</p>
+				    <a href="#" class="btn  btn-primary"><b>E-Books-></b></a>
+				  </div>
+				</div>
+			</td>
+		</div>
+	</div>
 
 
 
@@ -265,5 +325,5 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
