navbar_toggle_correction

--- a/index.html
+++ b/index.html
@@ -108,32 +108,33 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="#">College Mate</a>
+	    <a class="navbar-brand" href="#" id="project_title">College Mate</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      	<span class="navbar-toggler-icon"></span>
-    	</button>
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+	  
 	  
 	    <div  class="collapse navbar-collapse" id="navbarNav">
 	      <ul class="navbar-nav">
-	      	<li class="nav-item">
+	      	<li class="nav-item nav-item1">
 	          <a class="nav-link active" href="index.html">HOME</a>
 	        </li>
-	        <li class="nav-item">
+	        <li class="nav-item nav-item1">
 	          <a class="nav-link" href="cse.html">CSE</a>
 	        </li>
-	        <li class="nav-item">
+	        <li class="nav-item nav-item1">
 	          <a class="nav-link" href="ece.html">ECE</a>
 	        </li>
-	        <li class="nav-item">
+	        <li class="nav-item nav-item1">
 	          <a class="nav-link" href="eee.html">EEE</a>
 	        </li>
-	        <li class="nav-item">
+	        <li class="nav-item nav-item1">
 	          <a class="nav-link" href="mech.html">MECH</a>
 	        </li>
-	        <li class="nav-item">
+	        <li class="nav-item nav-item1">
 	          <a class="nav-link" href="civil.html">CIVIL</a>
 	        </li>
-	        <li class="nav-item">
+	        <li class="nav-item nav-item1">
 	          <a class="nav-link" href="civil.html">IT</a>
 	        </li>
 	      </ul>
