--- a/index.html
+++ b/index.html
@@ -106,16 +106,18 @@
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar1 fixed-top">
+	<br>
+	
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="#" id="project_title">College Mate</a>
+	    <a class="navbar-brand navbar-brand1" href="#" id="project_title">College Mate</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 	  
 	  
-	    <div  class="collapse navbar-collapse" id="navbarNav">
-	      <ul class="navbar-nav">
+	    <div  class="collapse navbar-collapse " id="navbarNav">
+	      <ul class="navbar-nav ">
 	      	<li class="nav-item nav-item1">
 	          <a class="nav-link active" href="index.html">HOME</a>
 	        </li>
@@ -169,6 +171,7 @@
 <br>
 <br>
 <br>
+
 
 
 <!--
@@ -264,7 +267,13 @@
 				  <div class="card-body">
 				    <h5 class="card-title">COMPUTER SCIENCE ENGINEERING</h5>
 				    <p class="card-text">Computer Science Engineering (CSE) encompasses a variety of topics that relates to computation, like analysis of algorithms, programming languages, program design, software, and computer hardware. Computer Science engineering has roots in electrical engineering, mathematics, and linguistics.</p>
-				    <a href="cse.html" class="btn   btn-primary"><b>E-Books-></b></a>
+				    
+				    <a href="cse.html" class="btn btn-light  btn-outline-dark"><b>E-Books</b></a>
+				    &nbsp;
+				    &nbsp;
+				    &nbsp;
+				    <a href="..." class="btn btn-light  btn-primary"><b>E-Lectures</b></a>
+				   
 				  </div>
 				</div>
 
@@ -274,7 +283,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">ELECTRONICS AND COMMUNICATION ENGINEERING</h5>
 				    <p class="card-text">“Electronics and Communication Engineering” is one of the fastest growing field of engineering courses. It involves the transmission of information across the channel. Electronics and Communication Engineering (ECE) compiles in Communication Engineering and core Electronics Engineering.</p>
-				    <a href="ece.html" class="btn  btn-primary"><b>E-Books-></b></a>
+				    <a href="ece.html" class="btn btn-light btn-primary"><b>E-Books-></b></a>
 				  </div>
 				</div>
 
@@ -283,7 +292,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">ELECTRICAL AND ELECTRONICS ENGINEERING</h5>
 				    <p class="card-text">Electrical & Electronics Engineering (EEE), deals with the engineering problems, opportunities and needs of electrical, electronics, computer, telecommunication systems and related industries.</p>
-				    <a href="eee.html" class="btn  btn-primary"><b>E-Books-></b> </a>
+				    <a href="eee.html" class="btn btn-light btn-primary"><b>E-Books-></b> </a>
 				  </div>
 				</div>
 
@@ -292,7 +301,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">MECHANICAL ENGINEERING</h5>
 				    <p class="card-text">Mechanical engineers produce specifications for, design, develop, manufacture and install new or modified mechanical components or systems. Mechanical engineers need to be technically minded, able to demonstrate numerical and scientific ability and have problem-solving skills.</p>
-				    <a href="mech.html" class="btn btn-primary"><b>E-Books-></b></a>
+				    <a href="mech.html" class="btn btn-light btn-primary"><b>E-Books-></b></a>
 				  </div>
 				</div>
 
@@ -301,7 +310,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">CIVIL ENGINEERING</h5>
 				    <p class="card-text">Civil engineers create, improve and protect the environment in which we live. They plan, design and oversee construction and maintenance of building structures and infrastructure, such as roads, railways, airports, bridges, harbours, dams, irrigation projects, power plants, and water and sewerage systems.</p>
-				    <a href="civil.html" class="btn  btn-primary"><b>E-Books-></b></a>
+				    <a href="civil.html" class="btn btn-light btn-primary"><b>E-Books-></b></a>
 				  </div>
 				</div>
 
@@ -310,7 +319,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">INFORMATION AND TECHNOLOGY</h5>
 				    <p class="card-text">Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data or information. IT is typically used within the context of business operations as opposed to personal or entertainment technologies. IT is considered to be a subset of information and communications technology (ICT).</p>
-				    <a href="#" class="btn  btn-primary"><b>E-Books-></b></a>
+				    <a href="#" class="btn btn-light btn-primary"><b>E-Books-></b></a>
 				  </div>
 				</div>
 			</td>
