--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CollegeMate</title>
+
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<link rel="icon" href="./css/favicon.ico">
@@ -159,7 +160,7 @@
 
 	    	<blockquote class="blockquote">
 	    	<p id="title" >CollegeMate</p>	
-	    	<p id="title">" Books are no more threatened by kindle than stairs by elevators! "</p>
+	    	<p id="content_right">" Books are no more threatened by kindle than stairs by elevators! "</p>
 	    	</blockquote>
 	    </div>
 	</div>
@@ -268,11 +269,11 @@
 				    <h5 class="card-title">COMPUTER SCIENCE ENGINEERING</h5>
 				    <p class="card-text">Computer Science Engineering (CSE) encompasses a variety of topics that relates to computation, like analysis of algorithms, programming languages, program design, software, and computer hardware. Computer Science engineering has roots in electrical engineering, mathematics, and linguistics.</p>
 				    
-				    <a href="cse.html" class="btn btn-light  btn-outline-dark"><b>E-Books</b></a>
+				    <a href="cse.html" class="btn btn-light  btn-outline-dark"><b><i>E-Books</i></b></a>
 				    &nbsp;
 				    &nbsp;
 				    &nbsp;
-				    <a href="..." class="btn btn-light  btn-primary"><b>E-Lectures</b></a>
+				    <a href="..." class="btn btn-light  btn-primary"><b><i>E-Lectures</i></b></a>
 				   
 				  </div>
 				</div>
@@ -283,7 +284,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">ELECTRONICS AND COMMUNICATION ENGINEERING</h5>
 				    <p class="card-text">“Electronics and Communication Engineering” is one of the fastest growing field of engineering courses. It involves the transmission of information across the channel. Electronics and Communication Engineering (ECE) compiles in Communication Engineering and core Electronics Engineering.</p>
-				    <a href="ece.html" class="btn btn-light btn-primary"><b>E-Books-></b></a>
+				    <a href="ece.html" class="btn btn-light btn-primary"><b><i>E-Books-></i></b></a>
 				  </div>
 				</div>
 
@@ -292,7 +293,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">ELECTRICAL AND ELECTRONICS ENGINEERING</h5>
 				    <p class="card-text">Electrical & Electronics Engineering (EEE), deals with the engineering problems, opportunities and needs of electrical, electronics, computer, telecommunication systems and related industries.</p>
-				    <a href="eee.html" class="btn btn-light btn-primary"><b>E-Books-></b> </a>
+				    <a href="eee.html" class="btn btn-light btn-primary"><b><i>E-Books-></i></b> </a>
 				  </div>
 				</div>
 
@@ -301,7 +302,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">MECHANICAL ENGINEERING</h5>
 				    <p class="card-text">Mechanical engineers produce specifications for, design, develop, manufacture and install new or modified mechanical components or systems. Mechanical engineers need to be technically minded, able to demonstrate numerical and scientific ability and have problem-solving skills.</p>
-				    <a href="mech.html" class="btn btn-light btn-primary"><b>E-Books-></b></a>
+				    <a href="mech.html" class="btn btn-light btn-primary"><b><i>E-Books-></i></b></a>
 				  </div>
 				</div>
 
@@ -310,7 +311,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">CIVIL ENGINEERING</h5>
 				    <p class="card-text">Civil engineers create, improve and protect the environment in which we live. They plan, design and oversee construction and maintenance of building structures and infrastructure, such as roads, railways, airports, bridges, harbours, dams, irrigation projects, power plants, and water and sewerage systems.</p>
-				    <a href="civil.html" class="btn btn-light btn-primary"><b>E-Books-></b></a>
+				    <a href="civil.html" class="btn btn-light btn-primary"><b><i>E-Books-></i></b></a>
 				  </div>
 				</div>
 
@@ -319,7 +320,7 @@
 				  <div class="card-body">
 				    <h5 class="card-title">INFORMATION AND TECHNOLOGY</h5>
 				    <p class="card-text">Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data or information. IT is typically used within the context of business operations as opposed to personal or entertainment technologies. IT is considered to be a subset of information and communications technology (ICT).</p>
-				    <a href="#" class="btn btn-light btn-primary"><b>E-Books-></b></a>
+				    <a href="#" class="btn btn-light btn-primary"><b><i>E-Books-></i></b></a>
 				  </div>
 				</div>
 			</td>
